# md-tts

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.cpu  Dockerfile.cuda  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  requirements-cpu.txt  requirements-cuda.txt
models/: database.py  schemas.py  voice_models.py
services/: database_service.py  markdown_processor.py  tts_service.py
static/: app.js  index.html  style.css
storage/: history.db
tests/: test_database_service.py  test_main.py  test_markdown_processor.py  test_tts_service.py
